Removed "clever" managers system, replacing it back with singleton for mixins and DI