@@ -1,17 +1,15 @@
 package net.bivrik.fancytoasts.client.toast.animation;
 
+import net.bivrik.fancytoasts.FancyToasts;
 import net.bivrik.fancytoasts.client.config.DisplayTextType;
 import net.bivrik.fancytoasts.client.config.ToastScreenBehavior;
 import net.bivrik.fancytoasts.client.toast.AnimationSetup;
 import net.bivrik.fancytoasts.core.Color;
-import net.bivrik.fancytoasts.core.Managers;
 import net.bivrik.fancytoasts.core.event.GeneralConfigDataEvent;
-import net.bivrik.fancytoasts.platform.Services;
 import net.bivrik.fancytoasts.platform.utility.GuiContext;
-import net.bivrik.fancytoasts.platform.utility.ToastDisplayInfo;
+import net.bivrik.fancytoasts.platform.utility.AdvancementDisplay;
 import net.bivrik.fancytoasts.utility.TextureUV;
 import net.bivrik.fancytoasts.utility.TypeBasedUVs;
-import net.minecraft.advancements.Advancement;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.network.chat.Component;
@@ -29,7 +27,7 @@ public abstract class FancyToastAnimation {
     private List<FormattedCharSequence> titleLines;
     private List<FormattedCharSequence> descriptionLines;
 
-    protected ToastDisplayInfo displayInfo;
+    protected AdvancementDisplay display;
     protected Minecraft minecraft;
     protected int toastWidth;
     protected int toastHeight;
@@ -38,7 +36,6 @@ public abstract class FancyToastAnimation {
     private TypeBasedUVs typeBasedUVs;
     private TextureUV backgroundUV;
     private TextureUV plaqueUV;
-    private Advancement advancement;
 
     private float guiAlpha = 1.0f;
     private boolean shouldTransparentToast;
@@ -49,13 +46,13 @@ public abstract class FancyToastAnimation {
     protected Style titleStyle;
     protected Style descriptionStyle;
 
-    FancyToastAnimation() {
+    public FancyToastAnimation() {
         generalConfigDataEventConsumer = this::onGeneralConfigDataChanged;
-        Managers.getEventManager().subscribeToEvent(GeneralConfigDataEvent.class, generalConfigDataEventConsumer);
+        FancyToasts.EVENTS.subscribeToEvent(GeneralConfigDataEvent.class, generalConfigDataEventConsumer);
     }
 
-    public void setup(AnimationSetup setup, Minecraft minecraft, int toastWidth, int toastHeight, Advancement advancement) {
-        var data = Managers.getConfigManager().getGeneralConfigData();
+    public void setup(AnimationSetup setup, Minecraft minecraft, int toastWidth, int toastHeight) {
+        var data = FancyToasts.getInstance().getConfigManager().getGeneralConfigData();
         this.shouldTransparentToast = data.getToastScreenBehavior().equals(ToastScreenBehavior.TRANSPARENT);
         this.loopsStrength = data.getLoopsStrength();
         this.loopsSpeed = data.getLoopsSpeed();
@@ -65,16 +62,15 @@ public abstract class FancyToastAnimation {
         this.minecraft = minecraft;
         this.toastWidth = toastWidth;
         this.toastHeight = toastHeight;
-        this.advancement = advancement;
-        this.textureLocation = setup.textureLocation();
-        this.displayInfo = setup.displayInfo();
-        this.typeBasedUVs = setup.typeBasedUVs();
-        this.backgroundUV = setup.backgroundUV();
-        this.plaqueUV = setup.plaqueUV();
+        this.textureLocation = setup.getTextureId();
+        this.display = setup.getDisplay();
+        this.typeBasedUVs = this.display.getType().getUvs();
+        this.backgroundUV = setup.getBackgroundUV();
+        this.plaqueUV = setup.getPlaqueUV();
     }
 
     public void unsubscribeFromGeneralConfigDataEvent() {
-        Managers.getEventManager().unsubscribeFromEvent(GeneralConfigDataEvent.class, generalConfigDataEventConsumer);
+        FancyToasts.EVENTS.unsubscribeFromEvent(GeneralConfigDataEvent.class, generalConfigDataEventConsumer);
     }
 
     private void onGeneralConfigDataChanged(GeneralConfigDataEvent event) {
@@ -85,8 +81,8 @@ public abstract class FancyToastAnimation {
     }
 
     protected void setLines(Component toastTitle, Component toastDescription) {
-        Component title = titleDisplayTextType.getDisplayTextOrElse(displayInfo, toastTitle);
-        Component description = descriptionDisplayTextType.getDisplayTextOrElse(displayInfo, toastDescription);
+        Component title = titleDisplayTextType.getDisplayTextOrElse(display, toastTitle);
+        Component description = descriptionDisplayTextType.getDisplayTextOrElse(display, toastDescription);
 
         titleStyle = title.getStyle();
         descriptionStyle = description.getStyle();
@@ -104,7 +100,7 @@ public abstract class FancyToastAnimation {
     }
 
     public void draw(GuiGraphics guiGraphics, long time) {
-        if (shouldTransparentToast && Objects.requireNonNull(Managers.getToastManager()).isScreenOpened()) {
+        if (shouldTransparentToast & Objects.requireNonNull(FancyToasts.getInstance().getToastManager()).isScreenOpened()) {
             guiAlpha = 0.5f;
         }
         else if (guiAlpha != 1.0f) {
@@ -118,11 +114,7 @@ public abstract class FancyToastAnimation {
 
     protected void drawIcon(GuiContext guiContext, float alpha) {
         guiContext.drawGUITexture(textureLocation, 68, 0, 26, 26, typeBasedUVs.frame(), getColor(alpha));
-        if (Services.DAWN_ERA_HELPER.isLoaded() && advancement != null && Services.DAWN_ERA_HELPER.isCustomIcon(advancement)) {
-            Services.DAWN_ERA_HELPER.drawCustomIcon(guiContext.guiGraphics(), advancement, 66, 0);
-        } else {
-            guiContext.guiGraphics().renderFakeItem(displayInfo.getIcon(), 73, 5);
-        }
+        guiContext.guiGraphics().renderFakeItem(display.getIcon(), 73, 5);
     }
     protected void drawIcon(GuiContext guiContext) {
         drawIcon(guiContext, 1);
@@ -150,8 +142,8 @@ public abstract class FancyToastAnimation {
         }
 
         int toastCenterX = toastWidth / 2;
-        int titleColorARGB = displayInfo.getAdvancementType().getMainColor().withAlpha(alpha).getARGB();
-        FormattedCharSequence titleLine = titleLines.get(0);
+        int titleColorARGB = display.getTitleColor().withAlpha(alpha).getARGB();
+        FormattedCharSequence titleLine = titleLines.getFirst();
 
         if (titleLines.size() == 1) {
             guiGraphics.drawCenteredString(minecraft.font, titleLine, toastCenterX, 25, titleColorARGB);
@@ -165,7 +157,7 @@ public abstract class FancyToastAnimation {
             return;
         }
 
-        int descriptionColorARGB = displayInfo.getAdvancementType().getSecondaryColor().withAlpha(alpha).getARGB();
+        int descriptionColorARGB = display.getDescriptionColor().withAlpha(alpha).getARGB();
 
         guiGraphics.drawString(minecraft.font, descriptionLines.get(0), 8, 38, descriptionColorARGB);
         if (descriptionLines.size() > 1) {
